tests/flow/for/scope.js
for (const x in x) {} // error: can not reference undeclared x in right-hand expr
